--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -2,7 +2,7 @@
 
 ### Socioeconomic Status (SES)
 
-Measures of parent occupation were obtained for both mother and partner during child gestation. Parental occupations were then classified as unskilled(0), partly skilled (1), skilled manual (2), skilled non-manual (3), manegerial and technical (4), or professional (5). Of reported parent occupations, the highest reported occupation was used as a proxy for parent SES, to be treated as a continuous (0-5) covariate in analyses.
+Measures of parent occupation were obtained for both mother and partner during child gestation. Parental occupations were then classified as unskilled(0), partly skilled(1), skilled manual(2), skilled non-manua (3), manegerial and technical(4), or professional(5). Of reported parent occupations, the highest reported occupation was used as a proxy for parent SES, to be treated as a continuous (0-5) covariate in analyses.
 
 ### Objective Physical Activity
 
@@ -35,18 +35,17 @@ Objective body mass index (BMI) was collected at face-to-face assessment (median
 
 ### Cognitive Eating Disorder Features
 
-Cognitive eating disorder features were assessed across age, with a robust
+Cognitive eating disorder features were assessed across age, with a robust number of cognitive ED features assessed at age 14, a few at age 18, and limited cognitive ED symptoms assessed at ages 16 and 24. Cognitive ED 
 
 | Construct                   | Age        | Description                                                                                                                                                                                                                           |
-|:----------------|:----------------|:-------------------------------------|
+|:-------------|:-------|:----------------------------------------------|
 | Thin ideal internalization  | 14         | Measured via the Ideal Body Stereotype Scale-Revised. Adolescents responded to statements regarding appearance ideals rated on a 5-point Likert scale from 'strongly agree' to 'strongly disagree.'                                   |
-| Pressure to Lose Weight     | 14         | Assessed via the Perceived Sociocultural Pressure Scale. Pressure to lose weight from friends, family, romantic partners, and the media .                                                                                             |
+| Pressure to Lose Weight     | 14         | Assessed via the Perceived Sociocultural Pressure Scale. Pressure to lose weight from friends, family, romantic partners, and the media.                                                                                              |
 | Pressure to Increase Muscle | 14         | Assessed via the Perceived Sociocultural Pressure Scale. Pressure to gain muscle from friends, family, romantic partners, and the media.                                                                                              |
-| Weight-related Teasing      | .          | Adolescents reported weight related teasing from peers and family members with five possible responses ranging from "never" to "at least once a week."                                                                                |
 | External Eating             | 14         | Assessed via the Dutch Eating Behavior Questionnaire (DEBQ)                                                                                                                                                                           |
 | Restrained Eating           | 14         | Assessed via the Dutch Eating Behavior Questionnaire (DEBQ)                                                                                                                                                                           |
 | Emotional Eating            | 14         | Assessed via the Dutch Eating Behavior Questionnaire (DEBQ)                                                                                                                                                                           |
-| Weight/Shape Concern        | 14         | Weight and shape concern at age 14 was assessed using a 4 item questionnaire adapted from the McKnight Risk Factor Survey.                                                                                                            |
+| Weight/Shape Concern        | 14         | Assessed using a 4-item questionnaire adapted from the McKnight Risk Factor Survey.                                                                                                                                                   |
 | Body Dissatisfaction        | 14, 18, 24 | The Body (dis)Satisfaction Scale asked individuals to rate their satisfaction with body parts on a 5-point Likert scale, from 'extremely satisfied' to 'extremely dissatisfied' with higher values indicating higher dissatisfaction. |
 | Dieting                     | 14, 16, 18 | Participant dieting was measured at age 14, 16, and 18 and measured frequency during the past year YP went on a diet to lose weight/keep from gaining weight, length of diet, amount of weight lost, and amount of weight regained.   |
 | Fear of Weight Gain         | 14, 24     | Participants reported the degree they worried about gaining a little weight (two pounds) in the past year.                                                                                                                            |
@@ -63,7 +62,7 @@ The measurement of eating disorder behaviors in adolescence captures a more comp
 
 Binge eating
 
-#### Purging 
+#### Purging
 
 Purging
 
@@ -82,5 +81,7 @@ Eating disorder diagnoses (AN, BN,BED, BN-Spectrum [Purging disorder and subclin
 ```{r alspac_dx_table, fig.cap= 'Diagnostic Criteria Assessed Across Age'}
 knitr::include_graphics('figs/ALSPAC_Dx_Table.png')
 ```
+
+***Note***. \* indicates that criteria was not assessed at that timepoint. Criteria thus not required for diagnosis at relevant timepoint. Wt = Weight. AN criteria 'Fear of Gaining Weight' and 'Disturbance in body weight/shape, self-worth influenced by weight and shape, or persistent lack of recognition of seriousness of low body weight' combined as a single indicator due to inconsistent measurement in fear of weight gain and potential for lack of insight amongst youth. At each timepoint, diagnosis was given hierarchically from top to bottom of the table (e.g. if symtpoms meeting criteria for AN and BN are both endorsed, AN is the given diagnosis).
 
 ### 
